# LinearAVX

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  decoder.c  decoder.h  encoder.c  encoder.cpp  encoder.h  handler.c  handler.cpp  handler.h  main.c  memmanager.cpp  memmanager.h  printinstr.c  printinstr.h  utils.c  utils.h
Cache/: Cache.h
Compiler/: Compiler.cpp  Compiler.h  Encoder.cpp  Encoder.h
Instructions/: AND.h  ANDN.h  BLSR.h  CompilableInstruction.h  Instruction.cpp  Instruction.h  Instructions.h  Metadata.h  Operand.cpp  Operand.h  SARX.h  SHLX.h  SHRX.h  VADDPD.h  VADDPS.h  VADDSD.h  VADDSS.h  VANDNPD.h  VANDNPS.h  VANDPD.h  VANDPS.h  VBLENDPD.h  VBLENDPS.h  VBLENDVPD.h  VBLENDVPS.h  VBROADCASTSS.h  VCMPPD.h  VCMPPS.h  VCMPSD.h  VCOMISD.h  VCOMISS.h  VCVTPS2PH.h  VCVTSD2SS.h  VCVTSI2SD.h  VCVTSI2SS.h  VCVTSS2SD.h  VCVTTPS2DQ.h  VCVTTSD2SI.h  VCVTTSS2SI.h  VDIVSD.h  (+94 more)
Tests/: CMakeLists.txt  Harness.cpp  Harness.h  TestCompiler.cpp  TestCompiler.h  Tests.cpp
common/: Cargo.toml
common/src/: compiler.rs  debugger.rs  decoder.rs  lib.rs  tir.rs
common/src/debugger/: process.rs  thread.rs
common/src/debugger/process/: allocator.rs  memory_info.rs
common/src/decoder/: base.rs  decoded_block.rs  memory.rs  process.rs
common/src/tir/: assembler.rs  instruction.rs
common/src/tir/instruction/: mapping.rs  table.rs
launcher/: Cargo.toml
launcher/src/: main.rs
macos-sign/: sign.sh
static_recompiler/: Cargo.toml
static_recompiler/src/: lib.rs  main.rs
testapp/: CMakeLists.txt  build.zig  main.c
