[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.53.0"
features = [
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem"
]

[dependencies]
iced-x86 = "1.21.0"
im = "15.1.0"
intervaltree = "0.2.7"
itertools = "0.12.1"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"